[package]
name = "dropsy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [
    "env-filter",
    "fmt",
    "std",
]
